# options-bot

./: .env.example  .gitignore  .mcp.json  BACKTEST_RESULTS.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  LICENSE  MIGRATE_NOW  Makefile  OUTLAY_DOMAIN_SETUP.md  OUTLAY_PILOT_OUTREACH.md  README.md  TODO.md  alerts.py  backtest.py  black_scholes.py  chain_trader.py  config.py  data_fetcher.py  debrief.py  docker-compose.yml  equity_strategies.py  equity_trader.py  experiments.py  fly.toml  historical_alerts.py  indicators.py  live_alerts.py  modelpilot_icp_target_list.md  news.py  options-bot-debrief.ics  paper_trader.py  public_summary.py  report.py  requirements.txt  run.py  segment_perf_report.md  signals.py  spread_trader.py  (+8 more)
brain/: DEPLOY.md  Dockerfile  FLY_DEPLOY.md  README.md  fly.toml  requirements.txt  server.py  test_brain.py
console/: CRON_SETUP.md  DEPLOY.md  Dockerfile  FLY_DEPLOY.md  README.md  close_pack.py  cost_to_serve.py  create_admin.py  create_test_account.py  create_test_customer.py  demo.py  digest.py  notify.py  outlay_app.py  requirements.txt  secret_box.py  seed.py  server.py  spend_digest.py  store.py  stripe_billing.py  test_console.py  web.py  webauthn_box.py
deploy/: .env.example  README.md
docs/: BRAND.md  DEPLOY_FROM_CLOUD.md  FRONTEND_TOOLING.md  REDESIGN_TODO.md  competitive-battlecards.md  cost-to-serve-ktlo.md  finance-ux-proposal.md  gov-readiness-build-plan.md  incident-response-plan.md  (+27 more)
modelpilot/packaging/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
modelpilot/packaging/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  routing_miss.md
modelpilot/packaging/.github/workflows/: ci.yml  pages.yml
(+430 files in other folders)
